# cryptography

./: .clang-tidy  .gitignore  LICENSE  README.md  cmake-clang  compile_commands.json  hex.h  makefile
base64/: base64.c  base64.h  hex.h  main.c
files/: bible.b64  xor-crack-repeat.b64
include/: base64.h  hamming.h  score.h  xor-crack-repeat.h  xor-crack-types.h  xor-crack.h  xor-encrypt-repeat.h
include/xor-crack/: score.h  xor-crack.h
include/xor-detect/: xor-detect.h
include/xor-encrypt/: xor-encrypt.h
src/: CMakeLists.txt  Makefile  aes.c  aes.h  aes_galois.c  aes_galois.h  aes_s_box.h  algorithms.c  algorithms.h  base64.c  base64.h  hamming.h  hex.h  io.c  io.h  meson.build  mk_builddir  score.c  score.h  xor-crack-repeat.c  xor-crack-repeat.h  xor-crack-types.h  xor-crack.c  xor-crack.h  xor-detect-single.c  xor-detect-single.h  xor-encrypt-repeat.c  xor-encrypt-repeat.h  xor-encrypt.c  xor.c  xor.h
src/main/: aestest.c  base64-main.c  craxor.c  io-main.c  xor-crack-main.c  xor-crack-repeat-main.c  xor-detect-single-main.c  xor-encrypt-main.c  xor-encrypt-repeat-main.c
src/subprojects/: unity.wrap
src/test/: set-1-test.c  set-1-test.h
xor/: xor.c  xor.h  xor_test.c
xor-crack/src/: makefile  xor-crack.c
xor-cracking/: score.c  xor-cracking-test.c  xor-cracking.c  xor-cracking.h
xor-detect/src/: main.c  makefile  xor-detect.c
xor-encrypt/src/: makefile
